k8s_resource_yaml/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-demo
spec:
  containers:
  - name: nginx
    image: nginx:v1
    imagePullPolicy: Never
    resources:
      limits:
        memory: "4Gi"
      requests:
        memory: "2Gi"
