k8s_resource_yaml/pod_2_container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container
spec:
  containers:
  - name: nginx
    image: nginx:v1
    imagePullPolicy: Never
  - name: busybox
    image: busybox:latest
    imagePullPolicy: Never
    command: ['sh', '-c', 'echo This is busybox! && sleep 3000']
    resources:
      limits:
        memory: "200Mi"
      requests:
        memory: "100Mi"
